Fix: Calendar popup for date fields behind the dialog in some cases

--- a/openxava/src/main/resources/META-INF/resources/xava/style/base.css
+++ b/openxava/src/main/resources/META-INF/resources/xava/style/base.css
@@ -755,7 +755,7 @@ input[type="text"]:disabled, input[type="password"]:disabled, input[type="file"]
 }
 
 .flatpickr-calendar.open{
-	z-index:2147483699;
+	z-index: 2147483699 !important;
 }
 
 .ie .ox-date-calendar input {
